# Auth

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Discord Authenticator Bericht  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: copilot-instructions.md
Caddy/conf/: Caddyfile
apps/frontend/: dockerfile  package.json  pnpm-lock.yaml
apps/frontend/src/: app.html
apps/frontend/src/lib/components/: DarkModeToggle.svelte  Login.svelte  Navbar.svelte
apps/frontend/src/routes/: +layout.svelte  layout.css
apps/web/: Dockerfile  package.json
apps/web/src/lib/components/: Login.svelte
apps/web/src/routes/: +page.svelte
caddy/: Caddyfile
docker/: docker-compose.yaml
frontend/: Dockerfile  package.json
frontend/src/: app.d.ts  app.html
frontend/src/lib/auth/: logout.ts  ssr.ts  user.ts
frontend/src/lib/auth/api/: login.ts  logout.ts
frontend/src/lib/components/: DarkModeToggle.svelte  Login.svelte  NavLinks.svelte  Navbar.svelte
frontend/src/lib/stores/: index.ts  user.svelte.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts
frontend/src/routes/admin/: +layout.server.ts  +layout.ts  +page.server.ts
frontend/src/routes/dashboard/: +layout.ts  +page.svelte
frontend/src/styles/: theme.css
services/auth-service/: .env.example  Cargo.toml  Dockerfile  Readme.md  docker-compose.yaml  package.json  tsconfig.json
services/auth-service/docs/: auth-architecture.md  auth-callback-flow.puml  auth-data-storage.puml  auth-flow.mmd  auth-login-flow.puml  auth-sequence.puml
services/auth-service/migrations/: 20251001_create_users_table.sql  20251001_setup_tables.sql  20251002_change_login_count.sql
services/auth-service/src/: config.rs  db.rs  main.rs  server.ts
services/auth-service/src/handlers/: callback.rs  login.rs  logout.rs  me.rs  mod.rs  refresh.rs
services/auth-service/src/logic/: crypto.rs  login.rs  mod.rs  models.rs  oauth.rs  session.rs
services/auth-service/src/logic/models/: db.rs  mod.rs  oauth.rs  postgres.rs  redis.rs  session.rs
services/auth-service/src/models/: user.rs
services/auth-service/src/queries/: mod.rs  oauth_tokens.rs  user_providers.rs  users.rs
services/auth-service/src/queries/redis/: session.rs
services/auth-service/src/routes/: auth.ts  discord.rs  mod.rs
services/commission-service/: Dockerfile  package.json
services/commission-service/src/: index.ts
services/commissions-service/: Cargo.toml  Dockerfile
services/commissions-service/src/: main.rs  models.rs
services/commissions-service/src/handlers/: commissions.rs  mod.rs
services/commissions-service/src/migrations/: 20260111_0001_create_commissions_table.sql
services/commissions-service/src/queries/: commissions.rs  mod.rs
services/frontend/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml
services/frontend/src/lib/auth/: server.ts
services/frontend/src/lib/components/: Lightbox.svelte  Login.svelte  NavLinks.svelte  Navbar.svelte  Navlink.svelte
services/frontend/src/lib/stores/: user.svelte.ts
services/frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  layout.css
services/frontend/src/routes/403/: +page.svelte
services/frontend/src/routes/admin/: +page.svelte
services/frontend/src/routes/auth/error/: +page.svelte
services/frontend/src/routes/dashboard/: +layout.server.ts  +page.svelte
services/frontend/src/routes/diagram/: +page.svelte
services/frontend/src/styles/: theme.css  utilities.css
services/payment-service/: Dockerfile  package.json
