[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hyper = "1.7.0"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }
oauth2 = "5.0.0"
url = "2.5.7"
async-http-client = "0.2.0"
aes-gcm = "0.10.3"
redis = { version = "0.32.7", features = ["aio", "connection-manager", "tokio-comp"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
rand = "0.8.5"
bb8 = "0.9.0"
bb8-redis = "0.24.0"
base64 = "0.22.1"
hex = "0.4.3"
