[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.0", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
uuid = { version = "1.19.0", features = ["v4"] }
oauth2 = "5.0.0"
aes-gcm = "0.10.3"
redis = { version = "1.0.0", features = ["aio", "connection-manager", "tokio-comp"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
rand = "0.8.0"
hex = "0.4.3"
time = "0.3.45"