[package]
name = "commissions-service"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "uuid"] }
anyhow = "1.0.100"
uuid = "1.19.0"
oso = "0.27.3"
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["full"] }
redis = "1.0.2"
axum = "0.8.8"
